fixed the off center images

--- a/app/Home.module.css
+++ b/app/Home.module.css
@@ -22,7 +22,6 @@
 
 & .img_container {
   display: flex;
-  /* height: 360px; */
   height: 100%;
   border-radius: 1rem;
   overflow: hidden;
@@ -142,12 +141,20 @@
     flex-direction: column;
 
     & figure {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       width: 100%;
       height: 224px;
       object-fit: cover;
       border-radius: 1rem;
       overflow: hidden;
       margin-block-end: var(--2xl);
+
+      & img {
+        min-height: 100%;
+        object-fit: cover;
+      }
 
       @media screen and (min-width: 768px) {
         height: 350px;
